# uewm

./: .gitignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_SETUP_GUIDE.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
docs/: translate_md.py  translate_v201.py
docs/attachment/: UEWM_MultiPlatform_Amendment_v1.0.docx
docs/en/: README.md
docs/en/design/: UEWM_Agents_Design_V2.0.1.md  UEWM_Agents_Design_deliver_v1.1.md  UEWM_Architecture_V2.0.1.md  UEWM_Architecture_deliver_v1.1.md  UEWM_Data_Strategy_V2.0.1.md  UEWM_Data_Strategy_deliver_v1.1.md  UEWM_Deployment_Operations_V2.0.1.md  UEWM_Deployment_Operations_deliver_v1.1.md  UEWM_EIP_Protocol_V2.0.1.md  UEWM_EIP_Protocol_deliver_v1.1.md  UEWM_Engineering_Spec_V2.0.1.md  UEWM_Engineering_Spec_deliver_v1.1.md  UEWM_Integration_Map_V2.0.1.md  UEWM_Integration_Map_deliver_v1.1.md  UEWM_Safety_Governance_V2.0.1.md  UEWM_Safety_Governance_deliver_v1.1.md  UEWM_Self_Evolution_V2.0.1.md  UEWM_Self_Evolution_deliver_v1.1.md  UEWM_Traceability_Matrix_V2.0.1.md  UEWM_Traceability_Matrix_deliver_v1.1.md
docs/en/guides/: quickstart.md
docs/en/requirements/: UEWM_Requirements_V6.1.md
docs/zh/: README.md
docs/zh/design/: UEWM_Agents_Design_V2.0.1.md  UEWM_Agents_Design_deliver_v1.1.md  UEWM_Architecture_V2.0.1.md  UEWM_Architecture_deliver_v1.1.md  UEWM_Data_Strategy_V2.0.1.md  UEWM_Data_Strategy_deliver_v1.1.md  UEWM_Deployment_Operations_V2.0.1.md  UEWM_Deployment_Operations_deliver_v1.1.md  UEWM_EIP_Protocol_V2.0.1.md  UEWM_EIP_Protocol_deliver_v1.1.md  UEWM_Engineering_Spec_V2.0.1.md  (+9 more)
proto/: buf.yaml
src/: __init__.py
src/agents/: __init__.py
src/brain/: __init__.py
src/data/: __init__.py
src/eip/: __init__.py
src/evolution/: __init__.py
src/knowledge/: __init__.py
src/perception/: __init__.py
src/security/: __init__.py
src/testing/: __init__.py
(+1 files in other folders)
