[project]
name = "uewm"
version = "0.1.0-dev"
description = "Universal Engineering World Model — AI-native engineering intelligence platform"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.12"
authors = [
    {name = "UEWM Team", email = "team@your-org.com"},
]
keywords = ["ai", "engineering", "world-model", "jepa", "ebm", "agents"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "protobuf>=4.25",
    "kafka-python>=2.0",
    "redis>=5.0",
    "psycopg[binary]>=3.1",
    "mlflow>=2.10",
    "numpy>=1.26",
    "scipy>=1.12",
    "pydantic>=2.5",
    "httpx>=0.27",
    "structlog>=24.1",
    "opentelemetry-api>=1.22",
    "opentelemetry-sdk>=1.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "black>=24.1",
    "ruff>=0.2",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[project.urls]
Homepage = "https://github.com/YOUR_ORG/uewm"
Documentation = "https://github.com/YOUR_ORG/uewm/tree/main/docs"
Repository = "https://github.com/YOUR_ORG/uewm"
Issues = "https://github.com/YOUR_ORG/uewm/issues"

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
